fix: prevent accessing Editor view on mobile

--- a/apps/xlayers/src/home/interactive-bg/interactive-bg.component.css
+++ b/apps/xlayers/src/home/interactive-bg/interactive-bg.component.css
@@ -116,12 +116,6 @@ section {
   animation-iteration-count: infinite;
 }
 
-@media (max-width: 1060px) {
-  .xly-btn--pulse {
-    display: none;
-  }
-}
-
 @keyframes pulsate {
   0% {
     opacity: 0;
